--- a/CryptoCurrencies/View/View.csproj
+++ b/CryptoCurrencies/View/View.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CurrenciesViewModel\CurrenciesViewModel.csproj" />
+    <ProjectReference Include="..\CurrenciesViewModel\ViewModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
